[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Actors/PandoBoss/PandaBoss.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Actors/PandoBoss/PandaBoss.gd" type="Script" id=2]
[ext_resource path="res://Assets/Enemies/Shadow.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 32.0
height = 18.0

[sub_resource type="Animation" id=3]
resource_name = "Attack"

[sub_resource type="Animation" id=4]
resource_name = "Die"
length = 0.2

[sub_resource type="Animation" id=5]
resource_name = "Hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionPolygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( -20, -88, 20, -88, 20, -52, 49, -29, 34, 24, -34, 24, -49, -29, -20, -52 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightOccluder2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LightOccluder2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightOccluder2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.25, 4.25 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightOccluder2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightOccluder2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LightOccluder2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.25, 4.25 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightOccluder2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightOccluder2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LightOccluder2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.25, 4.25 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.4
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 18, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionPolygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( -16, -24, 16, -24, 16, 16, -16, 16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightOccluder2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.16, 0.24, 0.32, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 14 ), Vector2( 0, 14 ), Vector2( 0, 6 ), Vector2( 0, 14 ), Vector2( 0, 32 ), Vector2( 0, 14 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LightOccluder2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.15, 0.16, 0.24, 0.32, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightOccluder2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.15, 0.16, 0.24, 0.32, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.3, 1.5 ), Vector2( 1.3, 1.5 ), Vector2( 1.3, 0.9 ), Vector2( 1.3, 1.5 ), Vector2( 1.3, 0.9 ), Vector2( 1.3, 1.5 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.4
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 23, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionPolygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.001 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -23, -33, 24, -33, 24, 26, -23, 26 ), PoolVector2Array( -16, -24, 16, -24, 16, 16, -16, 16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightOccluder2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.01, 0.09, 0.17, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 14 ), Vector2( 0, 32 ), Vector2( 0, 14 ), Vector2( 0, 6 ), Vector2( 0, 14 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LightOccluder2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.01, 0.09, 0.17, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightOccluder2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.01, 0.09, 0.17, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.3, 1.5 ), Vector2( 1.3, 0.9 ), Vector2( 1.3, 1.5 ), Vector2( 1.3, 0.9 ), Vector2( 1.3, 1.5 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.38
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.38 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionPolygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( -23, -36, 24, -36, 24, 14, -23, 14 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightOccluder2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -12, -4 ), Vector2( -12, 16 ), Vector2( -12, 28 ), Vector2( 0, 28 ), Vector2( 12, 28 ), Vector2( 12, 12 ), Vector2( 14, -2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LightOccluder2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightOccluder2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.75, 1 ), Vector2( 0.6, 1 ), Vector2( 0.6, 1 ), Vector2( 0.6, 1 ), Vector2( 0.6, 1 ), Vector2( 0.5, 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.38
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.38 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 2 ), Vector2( -2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionPolygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( -0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( -23, -36, 24, -36, 24, 14, -23, 14 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightOccluder2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 15, -3 ), Vector2( 12, 4 ), Vector2( 10, 32 ), Vector2( 0, 32 ), Vector2( -9, 32 ), Vector2( -12, 4 ), Vector2( -15, -3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LightOccluder2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightOccluder2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.75, 1 ), Vector2( 0.5, 1.25 ), Vector2( 0.5, 2 ), Vector2( 0.8, 0.8 ), Vector2( 0.8, 0.8 ), Vector2( 0.5, 2 ), Vector2( 0.5, 1.25 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="OccluderPolygon2D" id=13]
polygon = PoolVector2Array( -16, 0, 16, 0, 16, 16, -16, 16 )

[node name="PandaBoss" type="KinematicBody2D" groups=[
"Enemy",
]]
scale = Vector2( 0.75, 0.75 )
z_index = 2
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Shadow" type="Sprite" parent="Sprites"]
light_mask = 2
position = Vector2( 0, 50.862 )
scale = Vector2( 2.96966, 0.700614 )
texture = ExtResource( 5 )

[node name="BodySprite" type="Sprite" parent="Sprites"]
light_mask = 2
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 8
vframes = 3
frame = 19
region_rect = Rect2( 46, 56, 46, 56 )

[node name="Wzrok" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wzrok"]
position = Vector2( 0, 3.375 )
shape = SubResource( 1 )

[node name="RollingArea" type="Area2D" parent="Wzrok"]

[node name="RollingCollisionShape2D" type="CollisionShape2D" parent="Wzrok/RollingArea"]
position = Vector2( 0, 24 )
shape = SubResource( 2 )

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Die = SubResource( 4 )
anims/Hurt = SubResource( 5 )
anims/Idle1 = SubResource( 6 )
anims/Idle2 = SubResource( 7 )
anims/RollB = SubResource( 8 )
anims/RollF = SubResource( 9 )
anims/RollL = SubResource( 10 )
anims/RollR = SubResource( 11 )
anims/Walk = SubResource( 12 )

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 0, 14 )
scale = Vector2( 1.3, 1.5 )
occluder = SubResource( 13 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 32 )
polygon = PoolVector2Array( -16, -24, 16, -24, 16, 16, -16, 16 )

[node name="animHurtTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="body_entered" from="Wzrok" to="." method="_on_Wzrok_body_entered"]
[connection signal="body_exited" from="Wzrok" to="." method="_on_Wzrok_body_exited"]
[connection signal="body_entered" from="Wzrok/RollingArea" to="." method="_on_RollingArea_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="animHurtTimer" to="." method="_on_animHurtTimer_timeout"]
